--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial PHP 2021</title>
+    <style>
+        form{
+            display: flex;
+            flex-direction: column;
+            width: 200px;
+            padding: 40px;
+        }
+        input{
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
-    <h1>Esempio pagina</h1>
+    <h1>Form Esempio</h1>
+    <form action="POST" action="php\esempio.php">
+        <label for="nome">Nome</label>
+        <input type="text" id= "nome" name="nome" placeholder="Inserisci nome">
+        <label for="cognome">Cognome</label>
+        <input type="text" id= "cognome" name="cognome" placeholder="Inserisci cognome">
+        <input type="submit" value="Invia dati">
+    </form>
 </body>
 </html>
