--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <h1>Form Esempio</h1>
-    <form action="POST" action="php/esempio.php">
+    <form method="POST" action="./php/esempio.php">
         <label for="nome">Nome</label>
         <input type="text" id= "nome" name="nome" placeholder="Inserisci nome">
         <label for="cognome">Cognome</label>
